# IGecko

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  README.md  SECURITY.md
.agents/skills/: .antigravity-install-manifest.json
.github/: copilot-instructions.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml  release.yml
cmake/: CompilerWarnings.cmake  LTO.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
docs/: architecture.md  contributing.md  error-handling.md  getting-started.md  language-spec.md  modern-cpp-standards.md  overview.md  scripts.md
examples/: 00_hello.gk  01_variables.gk  02_operators.gk  03_control_flow.gk  04_functions.gk  05_classes.gk  06_error_handling.gk  07_imports.gk  08_import_selective.gk  09_package_import.gk  11_local_package.gk  12_error_test.gk  13_null.gk  14_return.gk  15_test_comments.gk  18_template_strings.gk  19_objects.gk  19_template_strings_advanced.gk  20_type_system.gk  21_http.gk  22_input.gk  23_anonymous_functions.gk  24_micro_api.gk  25_async_await.gk  26_file_io.gk  28_vm_module_test.gk  sample.gk
examples/28_vm_module_test/: index.gk
examples/useLibs/: 10_termcolor.gk  16_string.gk  17_math.gk
scripts/: build.sh  coverage.sh  format.sh  install-in-other-linux.sh  install-in-termux.sh  test.sh  tidy.sh
src/ast/: Nodes.h
src/cli/: main.cpp
src/cli/commands/: CheckCommand.cpp  CheckCommand.h  ExecuteCommand.cpp  ExecuteCommand.h
src/cli/gpm/: Config.cpp  Config.h  Installer.cpp  Installer.h  gpm.json  main.cpp
src/cli/repl/: Repl.h
src/cli/repl/components/: HistoryComponent.h  InputComponent.h  Theme.h
src/cli/ui/: Printer.cpp  Printer.h
src/compiler/: Compiler.cpp  Compiler.h
src/interpreter/: Interpreter.cpp  Interpreter.h
src/interpreter/environment/: Environment.cpp  Environment.h
src/interpreter/impl/: Builtins.cpp  ExprVisitor.cpp  StmtVisitor.cpp
src/interpreter/module/: FsModule.cpp  FsModule.h  HttpModule.cpp  HttpModule.h  JsonModule.cpp  JsonModule.h  ModuleLoader.cpp  ModuleLoader.h
src/interpreter/runtime/: Runtime.cpp  Runtime.h  Value.h
src/interpreter/utils/: InterpreterUtils.cpp  Operations.cpp
src/lexer/: Lexer.cpp  Lexer.h
src/parser/: Parser.cpp  Parser.h
src/stdlib/math/: index.gk
src/stdlib/random/: README.md  index.gk
src/stdlib/string/: README.md  index.gk
src/stdlib/termcolor/: README.md  index.gk
src/stdlib/time/: README.md  index.gk
src/utils/: Logger.cpp  Logger.h  PathUtils.h  ProcessUtils.cpp  ProcessUtils.h  Version.h
src/vm/: Chunk.cpp  Chunk.h  Disassembler.cpp  Disassembler.h  Object.cpp  Object.h  Value.cpp  Value.h  Vm.cpp  Vm.h
tests/: LexerTest.cpp  ParserTest.cpp
